<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="io.predic.cmp_sdk.viewmodels.SettingsViewModel"
        />
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="#FFFFFF">
        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:id="@+id/appBarLayout">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/settingsToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/toolbarColor"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    android:layout_weight="1"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <LinearLayout
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="32dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/protecting_your_privacy_is_our_priority"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/protectingPrivacyTitleTextView"/>
                    <TextView
                            android:layout_marginTop="16dp"
                            android:text="@string/protecting_privacy_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/protectingPrivacyTextView"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp">
                        <TextView
                                android:text="@string/select_all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#000000"
                                android:id="@+id/selectAllTextView"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:layout_weight="1"/>
                        <Switch
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/selectAllSwitch"
                                android:layout_weight="1"
                                android:theme="@style/SwitchTheme"
                                android:onCheckedChanged="@{(button, bool)-> viewModel.onSwitchCheckedChange(bool)}"
                        />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FAFAFA">
                    <TextView
                            android:text="@string/list_of_purposes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:id="@+id/listOfPurposesTextView"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"/>
                    <RelativeLayout android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:descendantFocusability="blocksDescendants">
                        <android.support.v7.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/purposesRecyclerView"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                        />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:onClick="@{viewModel::onPartnersButtonClick}">

                    <TextView
                            android:text="@string/see_our_partners"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/partnersTextView"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_weight="2"
                            android:layout_marginTop="8dp"/>
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_chevron_right"
                            android:id="@+id/partnersImageView"
                            android:layout_weight="0"
                            android:layout_marginTop="8dp"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
                android:text="@string/save_preferences"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/savePreferencesButton"
                android:layout_weight="0"
                android:textColor="#FFFFFF"
                android:textSize="19sp"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{viewModel::onSavePreferencesButtonClick}"
        />
    </LinearLayout>
</layout>